[package]
name = "yorick"
version = "0.1.0"
edition = "2021"
description = "For digging blocks of data into the disk."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
ahash = "0.8.3"
arc-swap = "1.6.0"
tracing = "0.1.37"
tracing-futures = "0.2.5"
futures-lite = "1.13.0"
flume = "0.10.14"
tachyonix = "0.2.0"
memmap2 = "0.7.1"
num_cpus = "1.15.0"
rayon = "1.7.0"
parking_lot = "0.12.1"
crc32fast = "1.3.2"
thiserror = "1"
exponential-backoff = "1.2.0"
smallvec = "1.10.0"
cityhasher = "0.1.0"
humansize = "2.1.3"

rkyv = { version = "0.7.42", features = ["strict", "archive_le", "validation"] }
tokio = { version = "1", default-features = false, features = ["sync", "fs", "io-util", "time", "rt"] }

glommio = { version = "0.8.0", optional = true }
lz4_flex = { version = "0.11", default-features = false, optional = true }

# We vendor our own version of evmap here to expose some nasty unsafe traits.
evmap = { git = "https://github.com/lnx-search/evmap.git", rev = "e470ff3" }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["full"] }
test-utils = { path = "test-utils" }
anyhow = "1"

[features]
default = ["rkyv_size_32", "compress-index"]
# Enables support for direct IO, typically improving performance
# and resource usage.
# This feature is only useful if you are running on modern NVMe drives
# this can hurt performance for older types of disk.
direct-io-backend = ["glommio"]
# When enabled, reads will produce buffers aligned to 16 bytes.
aligned-reads = []
# Enables `rkyv` `size_32` feature, treating `usize` values as 32 bit ints.
# This is enabled by default.
rkyv_size_32 = ["rkyv/size_32"]
# Enables `rkyv` `size_64` feature, treating `usize` values as 64 bit ints.
rkyv_size_64 = ["rkyv/size_64"]
compress-index = ["lz4_flex"]
# Enables some extra methods for testing.
test-utils = []

[workspace]
members = [
    "test-utils",
    "benchmarks"
]