[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = { version = "0.1.37", default-features = false }
tokio = { version = "1.30.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
tracing = "0.1.37"

tracing-subscriber = "0.3.17"
anyhow = "1"
humansize = "2.1.3"

test-utils = { path = "../test-utils" }
yorick = { path = "..", features = ["direct-io-backend"] }